# CadExchanger_test

./: Makefile  README.md  createCylinder.cpp  cylinder.h  main.cpp
Assignment_1/: README.md
Assignment_1/inc/: Ellipse2D.hpp  Point2D.hpp
Assignment_1/src/: ACurve2D.cpp  Ellipse2D.cpp  Point2D.cpp  main.cpp
Assignment_2/: CMakeLists.txt  README.md
Assignment_3/: CMakelists.txt  main.cpp
Assignment_3/lib/: CMakelists.txt
Assignment_3/lib/include/: triangle_area.h
Assignment_3/lib/src/: triangle_area.cpp
examples/: my_cylinder.stl  short_cylinder.stl
inc/: ACurve2D.hpp  Line2D.hpp
src/: Line2D.cpp  main.cpp
